--- a/app/src/main/res/layout/profile_list.xml
+++ b/app/src/main/res/layout/profile_list.xml
@@ -6,8 +6,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="0.1"
         android:orientation="horizontal"
-        android:layout_margin="10dp"
+        android:layout_margin="6dp"
+        android:padding="4dp"
+        android:background="@color/background"
         android:weightSum="1">
         <ImageView
             android:id="@+id/iv_profile"
@@ -23,15 +26,15 @@
             android:layout_height="match_parent"
             android:layout_weight="0.1"
             android:layout_marginLeft="16dp"
-            android:text="전종훈"
+            android:text="익명"
             android:textColor="@color/black"
             android:textSize="18sp">
         </TextView>
+
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="65dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.35">
-        </LinearLayout>
+            android:layout_weight="0.35"></LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -41,44 +44,33 @@
                 android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="786"
+                android:text="0"
                 android:textColor="@color/black"
                 android:textSize="14sp">
             </TextView>
         </LinearLayout>
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="4dp"
-            android:src="@drawable/bad"
-            android:scaleType="centerInside">
-        </ImageView>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0.35">
         </LinearLayout>
-        <ImageButton
-            android:id="@+id/ib_rategood"
-            android:layout_width="wrap_content"
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="0.4"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="6dp">
+        <Button
+            android:id="@+id/btn_rate"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/good"
-            android:scaleType="centerInside"
-            android:background="#00000000">
-        </ImageButton>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="0.15">
-        </LinearLayout>
-        <ImageButton
-            android:id="@+id/ib_ratebad"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@drawable/bad"
-            android:scaleType="centerInside"
-            android:background="#00000000">
-        </ImageButton>
+            android:background="@drawable/shape5"
+            android:text="평가하기"
+            android:textColor="@color/black"
+            android:textSize="14sp"></Button>
     </LinearLayout>
 </LinearLayout>
